@@ -877,11 +877,14 @@ See AHELP ZAPPERMASK, where allowed is improved, and disallowed is not.
 PROP_INSTANTDEATH=\
 Property   : Prop_InstantDeath\n\r\
 Targets    : MOB, Item, Room, Area\n\r\
-Parameters : zapper mask\n\r\
+Parameters : (MASK="[zapper]") (DAMAGE=[NUM]) (DMGPCT=[0-100]) (MSG="[STR]")\n\r\
 Example    : mask="-race +dwarf"\n\r\
+Example    : damage=10 dmgpct=0 msg="<S-NAME> <DAMAGES> <T-NAME>"\n\r\
 Description: \n\r\
-Will cause the death of anyone using the item, attacking the mob, or entering the room or area. If a mask \
-if given, only those matching the mask are killed. \n\r\
+Will (eventually) cause the death of anyone using the item, attacking the mob, \
+or entering the room or area.  If a mask if given, only those matching the mask \
+are killed. If a DMGPCT < 100 is used, damage is done and the MSG is displayed. \
+If a DAMAGE > 0 is used, but DMGPCT=0, then a flat amount of damage is done.\n\r\
 \n\r\
 See AHELP ZAPPERMASK, where allowed is killed, and disallowed is spared. 
 
