@@ -9,6 +9,7 @@
   8. Metacraft will select random resource by weight.  New value filter for metacraft in Random Generator.
   9. All achievements now support PLAYERMASK, even if it makes no sense.
  10. Lots of new achievements -- mostly skill proficiency related
+ 11. Prop_InstantDeath can now kill you less instantly.
   
 # Build 5.9.11.1 Release 02/26/2021
   Bug Fix Release:
